--- a/src/main/webapp/pages/advise.html
+++ b/src/main/webapp/pages/advise.html
@@ -232,48 +232,13 @@
             <div id="page-wrapper">
                 <div class="row">
                     <div class="col-lg-12">
-                        <h1 class="page-header">หน้าแรก</h1>
+                        <h1 class="page-header">การให้คำปรึกษา</h1>
                     </div>
                 </div>
 
                 <div class="row">
                     <div class="col-lg-4">
-                        <!-- menu right "Notifications Panel'-->
-                        <div class="panel panel-default">
-                            <div class="panel-heading">
-                                <i class="fa fa-bell fa-fw"></i> Notifications Panel
-                            </div>
-                            <div class="panel-body">
-                                <div class="list-group">
-                                    <a href="#" class="list-group-item">
-                                        <i class="fa fa-comment fa-fw"></i> New Comment
-                                        <span class="pull-right text-muted small"><em>4 minutes ago</em>
-                                        </span>
-                                    </a>
-                                    <a href="#" class="list-group-item">
-                                        <i class="fa fa-envelope fa-fw"></i> Message Sent
-                                        <span class="pull-right text-muted small"><em>27 minutes ago</em>
-                                        </span>
-                                    </a>
-                                </div>
-                                <a href="#" class="btn btn-default btn-block">View All Alerts</a>
-                            </div>
-                        </div>
-                        <!-- end menu right "Notifications Panel'-->
-                        <div class="chat-panel panel panel-default">
-
-                            <div class="panel-footer">
-                                <div class="input-group">
-                                    <input id="btn-input" type="text" class="form-control input-sm" placeholder="Type your message here..." />
-                                    <span class="input-group-btn">
-                                        <button class="btn btn-warning btn-sm" id="btn-chat">
-                                            Send
-                                        </button>
-                                    </span>
-                                </div>
-                            </div>
-                        </div>
-                        <!-- /.panel .chat-panel -->
+                        
                     </div>
                     <!-- /.col-lg-4 -->
                 </div>
