--- a/src/main/webapp/pages/index.html
+++ b/src/main/webapp/pages/index.html
@@ -40,14 +40,15 @@
                         </div>
                         <div id="navbar" class="navbar-collapse collapse">
                             <form class="navbar-form navbar-right">
+                                <br>
                                 <div class="form-group">
                                     <input type="text" placeholder="Email" class="form-control">
                                 </div>
                                 <div class="form-group">
                                     <input type="password" placeholder="Password" class="form-control">
                                 </div>
-                                <button type="submit" class="btn btn-success">Sign in</button>
-                                <br>
+                                <a href="login.html">
+                                <button type="submit" class="btn btn-success">Sign in</button></a>  
                                 <br>
                                 <h4 align="right"><font COLOR="#FFFFFF">Rajamangala University of Technology krungthep</font></h4>
                             </form>
