--- a/src/main/webapp/pages/advise.html
+++ b/src/main/webapp/pages/advise.html
@@ -46,7 +46,8 @@
             <div class="row">
                 <div class="col-sm-3 col-md-2 sidebar">
                     <ul class="nav nav-pills nav-stacked" style="max-width: 300px;">
-                        <li class="active"><a href="home.html">Home</a></li>
+                        <li><a href="home.html">Home</a></li>
+                        <li><a href="admin_add_User.html">Admin</a></li>
                         <li class="dropdown">
                             <a class="dropdown-toggle" data-toggle="dropdown" href="bootstrap-elements.html" data-target="#">
                                 Teacher <span class="caret"></span>
@@ -82,7 +83,7 @@
                                 การให้คำปรึกษา <span class="caret"></span>
                             </a>
                             <ul class="dropdown-menu">
-                                <li><a href="advise.html">ข้อมูลการให้คำปรึกษา</a></li>
+                                <li class="active"><a href="advise.html">ข้อมูลการให้คำปรึกษา</a></li>
                                 <li><a href="adviseAdd.html">เพิ่มข้อมูลการให้คำปรึกษา</a></li>
                             </ul>
                         </li>
@@ -116,8 +117,54 @@
                         <li><a href="timetable.html">ตารางเรียน/สอน</a></li>
                     </ul>
                 </div>
+
                 <div class="col-md-10">
-                    การให้คำปรึกษา
+                    <div class="form-group">
+                        <div class="panel panel">
+                            <div class="panel-heading">
+                                <h3 class="panel-title">Search</h3>
+                            </div>
+                            <div class="panel-body">
+                                <select class="form-control" id="select">
+                                    <option>หมวดวิชาการ</option>
+                                    <option>หมวดกิจกรรม</option>
+                                    <option>หมวดเรื่องทั่วไป</option>
+                                </select>
+                            </div>
+                        </div>
+                    </div>
+                    <br>
+                    <div class="form-group">
+                        <table class="table table-striped table-hover ">
+                            <thead>
+                                <tr>
+                                    <th>ลำดับ</th>
+                                    <th>นักศึกษา</th>
+                                    <th>วันที่-เวลา</th>
+                                    <th>ชื่อเรื่อง</th>
+                                    <th>หมวด</th>
+                                    <th>รายละเอียดคำปรึกษา</th>
+                                    <th>คำอธิบาย</th>
+                                    <th>edit</th>
+                                    <th>delete</th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                <tr>
+                                    <td>1</td>
+                                    <td>Column content</td>
+                                    <td>Column content</td>
+                                    <td>Delete</td>
+                                    <th></th>
+                                    <th></th>
+                                    <th></th>
+                                    <th></th>
+                                    <th></th>
+                                </tr>
+                            </tbody>
+                        </table>
+                    </div>
+                    <a href="courseAdd.html"><button class="btn btn-success">เพิ่มคำปรึกษา</button></a>
                 </div>
             </div>
             <br>
@@ -127,5 +174,8 @@
     <script src="../material/bootstrap-3.3.5-dist/js/bootstrap.min.js"></script>
     <script src="../material/dist/js/material.min.js"></script>
     <script src="../material/dist/js/ripples.min.js"></script>
+    <script>
+        $.material.init();
+    </script>
 </body>
 </html>
