--- a/src/main/webapp/index-template.html
+++ b/src/main/webapp/index-template.html
@@ -32,6 +32,7 @@
         <script src="js/course_subject_2.js"></script>
         <script src="js/course_subject_3.js"></script>
         <script src="js/course_subject_4.js"></script>
+        <script src="js/course_subject_5.js"></script>
         <script src="js/parent.js"></script>
         <script src="js/student.js"></script>
         <script src="js/teacher.js"></script>
@@ -121,7 +122,7 @@
                                 </ul>
                             </li>
                             <li><a href="#/timetable">ตารางเรียน/สอน</a></li>
-                            <li><a href="#/timetableAdd">add</a></li>
+
                         </ul>
 
                     </div>
