--- a/src/main/webapp/appointmentAdd.html
+++ b/src/main/webapp/appointmentAdd.html
@@ -1,7 +1,118 @@
+<link rel="stylesheet" href="calendar/jquery-ui.css" />
+<link rel="stylesheet" href="calendar/jquery-ui-timepicker-addon.css" />
+<script src="calendar/jquery-1.10.2.min.js"></script>
+<script src="calendar/jquery-ui.min.js"></script>
+<script src="calendar/jquery-ui-timepicker-addon.js"></script>
+<script src="calendar/jquery-ui-sliderAccess.js"></script>
 
 <div class="col-md-10">
 
-appointmentadd
+    <div class="panel panel-default">
+        <div class="panel-heading">Calendar</div>
+        <div class="panel-body">
+            <div style="overflow:hidden;">
+                <div class="form-group">
+                    <div class="row">
+                        <div class="col-md-8">
+                            <div id="datetimepicker12"></div>
+                        </div>
+                    </div>
+                </div>
+                <script type="text/javascript">
+                    $(function () {
+                        $('#datetimepicker12').datepicker({
+                            inline: true,
+                            sideBySide: true
+                        });
+                    });
+                </script>
+            </div>
+        </div>
+    </div>
+    <h1 class="page-header">การนัดหมาย</h1>
+    <button type="button" class="btn btn-success">
+        <span class="glyphicon glyphicon-search"></span> ดูวันเวลาว่างของอาจารย์
+    </button>
+    <br>
+    <br>
+    <div>
+        <form class="form-horizontal" role="form">
+            <div class="form-group">
+                <label class="control-label col-sm-2" for="email">ชื่อผู้นัดหมาย : </label>
+                <div class="col-sm-10">
+                    <input type="text" style="width:500px;" placeholder="ชื่อ...">
+                </div>
+            </div>
+            <div class="form-group">
+                <label class="control-label col-sm-2" for="email">ถึงผู้นัดหมาย : </label>
+                <div class="col-sm-10">
+                    <input type="text" style="width:500px;" placeholder="ถึง...">
+                </div>
+            </div>
+            <div class="form-group">
+                <label class="control-label col-sm-2" for="email">หัวข้อเรื่อง : </label>
+                <div class="col-sm-10">
+                    <input type="text" style="width:500px;" placeholder="เรื่อง...">
+                </div>
+            </div>
+            <div class="form-group">
+                <label class="control-label col-sm-2" for="email">สถานที่ : </label>
+                <div class="col-sm-10">
+                    <input type="text" style="width:500px;" placeholder="สถานที่...">
+                </div>
+            </div>
+            <div class="form-group">
+                <label class="control-label col-sm-2" for="email">วัน/เดือน/ปี : </label>
+                <div class="col-sm-10">
+                    <script type="text/javascript">
+                        $(function () {
+                            $("#dateInput").datepicker({
+                                dateFormat: 'dd-M-yy'
+                            });
+                        });
+                    </script>
+                    <input type="text" name="dateInput" id="dateInput" value="" /> 
+                </div>
+            </div>
+            <div class="form-group">
+                <label class="control-label col-sm-2" for="email">เวลา : </label>
+                <div class="col-sm-10">
+                    <input type="text" placeholder="เวลา...">
+                </div>
+            </div>
 
+            <div class="form-group">
+                <label class="control-label col-sm-2" for="email">สถานะ : </label>
+                <div class="col-sm-10">
+                    <input type="text" placeholder="เวลา...">
+                </div>
+            </div>
 
+            <div class="form-group">
+                <label class="control-label col-sm-2" for="comment">รายละเอียด : </label>
+                <div class="col-sm-10">
+                    <textarea type="text" style="width:500px;" rows="5" id="comment"></textarea>
+                </div>
+            </div>
+
+            <div class="form-group">
+                <label class="control-label col-sm-2" for="email">แนบไฟล์ : </label>
+                <div class="col-sm-10">
+                    <div style="position:relative;">
+                        <a class='btn btn-success' href='javascript:;'>
+                            Choose File...
+                            <input type="file" style='position:absolute;z-index:2;top:0;left:0;filter: alpha(opacity=0);-ms-filter:"progid:DXImageTransform.Microsoft.Alpha(Opacity=0)";opacity:0;' name="file_source" size="40"  onchange='$("#upload-file-info").html($(this).val());'>
+                        </a>
+                        &nbsp;
+                        <span class='label label-info' id="upload-file-info"></span>
+                    </div>
+                </div>
+            </div>
+
+            <input type="submit" value="save" ng-click="save()" class="btn btn-success">
+        </form> 
+    </div>
 </div>
+<script>
+            $.material.init();
+</script>
