--- a/src/main/webapp/behavior.html
+++ b/src/main/webapp/behavior.html
@@ -35,5 +35,5 @@
             </tr>
         </tbody>
     </table>
-    <a href="behaviorAdd.html"><button class="btn btn-success">เพิ่มคำปรึกษา</button></a>
+    <a href="#/behaviorAdd"><button class="btn btn-success">เพิ่มคำปรึกษา</button></a>
 </div>
