--- a/src/main/webapp/behaviorAdd.html
+++ b/src/main/webapp/behaviorAdd.html
@@ -1,7 +1,84 @@
-
 <div class="col-md-10">
+    <div id="myTabContent" class="tab-content">
+        <div class="list-group">
+            <div class="list-group-item">
+                <div class="row-content">
+                    <h4 class="list-group-item-heading">เพิ่มความประพฤติ</h4>
+                    <p class="list-group-item-text">
+                    <form class="form-horizontal">
+                        <fieldset>
+                            <div class="form-group">
+                                <label for="text" class="col-lg-2 control-label">รหัสนักศึกษา</label>
+                                <div class="col-lg-10">
+                                    <input type="text" style="background: #C0F9BD" class="form-control">
+                                </div>
+                            </div>
+                            <div class="form-group">
+                                <label for="text" class="col-lg-2 control-label">นักศึกษา</label>
+                                <div class="col-lg-10">
+                                    <input type="text" style="background: #C0F9BD" class="form-control">
+                                </div>
+                            </div>
+                            <div class="form-group">
+                                <label for="text" class="col-lg-2 control-label">ชั้นปี</label>
+                                <div class="col-lg-10">
+                                    <input type="text" style="background: #C0F9BD" class="form-control">
+                                </div>
+                            </div>
+                            <div class="form-group">
+                                <label for="text" class="col-lg-2 control-label">วันที่-เวลา</label>
+                                <div class="col-lg-10">
+                                    <input type="text" style="background: #C0F9BD" class="form-control">
+                                </div>
+                            </div>
 
-behavioradd
+                            <div class="container">
+                                <div class="panel panel-success" style="width:750px;">
+                                    <div class="panel-heading">รายการ</div>
+                                    <div class="panel-body">
+                                        <div class="form-group">
+                                            <label for="text" class="col-lg-2 control-label">ชื่อเรื่อง</label>
+                                            <div class="col-lg-10">
+                                                <input type="text" style="width:500px;" class="form-control">
+                                            </div>
+                                        </div>
+                                        <div class="form-group">
+                                            <label for="text" class="col-lg-2 control-label">รายละเอียดความประพฤติ</label>
+                                            <div class="col-lg-10">
+                                                <input type="text" style="width:500px;" class="form-control">
+                                            </div>
+                                        </div>
+                                        <div class="form-group">
+                                            <label for="text" class="col-lg-2 control-label">คำอธิบาย</label>
+                                            <div class="col-lg-10">
+                                                <input type="text" style="width:500px;" class="form-control">
+                                            </div>
+                                        </div>
+                                        <div class="form-group">
+                                            <label for="inputFile" class="col-lg-2 control-label">File</label>
+                                            <div class="col-lg-10">
+                                                <!--<input type="submit" id="input-picture" readonly="" class="form-control floating-label" placeholder="Browse...">-->
+                                                <input type="file" id="input-picture"> 
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
 
 
-</div>
+
+                            <div class="form-group">
+                                <center>
+                                    <button class="btn btn-success">Save</button>
+                                    <button class="btn btn-danger">Cancle</button>
+                                </center>
+                            </div>
+                        </fieldset>
+                    </form>
+                    </p>                                       
+                </div>
+            </div>
+        </div>
+
+    </div>
+</div> 
