--- a/src/main/webapp/appointment.html
+++ b/src/main/webapp/appointment.html
@@ -1,6 +1,6 @@
 
-<div class="col-md-10">  
     <div class="col-md-10">
+        <ul class="nav nav-pills"><a href="#/appointmentAdd">เพิ่มการนัดหมาย</a></ul>
         <div class="panel panel-default">
             <div class="panel-heading">ข้อมูลนัดหมาย</div>
             <div class="panel-body">
@@ -53,4 +53,3 @@
             </div>      
         </div>  
     </div>
-</div>
