--- a/src/main/webapp/course.html
+++ b/src/main/webapp/course.html
@@ -2,7 +2,7 @@
 <div class="col-md-10">  
 
     <ul class="nav nav-pills"><a href="#/course_subject">วิชาที่ทำการเปิดสอนในแต่ละชั้นปี</a></ul>
-    <h3>หลักสูตรรายวิชา</h3>
+    <ul class="nav nav-pills"><a href="#/courseAdd">เพิ่มรายวิชาในหลักสูตรการศึกษา</a></ul>
     <div>
         <table class="table table-bordered">
             <tbody>
