--- a/src/main/webapp/admin_add_User.html
+++ b/src/main/webapp/admin_add_User.html
@@ -1,9 +1,11 @@
+<script>
+    $.material.init();
+</script>
 <div class="col-md-10">
     <ul class="nav nav-pills">
         <li><a href="#/admin_add_groupemail">ส่งอีเมล์ถึงสมาชิก</a></li>
         <li><a href="#/admin_add_information">เพิ่มข่าวประชาสัมพันธ์</a></li>
     </ul>
-    <h3>Add User</h3>
     <div class="panel panel-primary">
         <div class="panel-heading">
             <h3 class="panel-title">เพิ่มผู้ใช้งาน</h3>
@@ -22,8 +24,7 @@
                 </div>
             </div>
             <div class="form-group">
-
-                <div class="radio radio-success">
+                <div class="radio radio-inline">
                     <label>สิทธิ์ผู้ใช้งาน</label>
                     <label>
                         <input type="radio" name="sample1" value="option1" checked="">
@@ -41,53 +42,50 @@
             </div>
             <div class="form-group">
                 <div class="col-lg-10 col-lg-offset-2">
-                    <button class="btn btn-default">Cancel</button>
+                    <button class="btn btn-default">Clear</button>
                     <button type="submit" class="btn btn-primary">Add User</button>
                 </div>
             </div>
         </div>
     </div>
-    <table class="table table-striped table-hover ">
-        <thead>
-            <tr>
-                <th>#</th>
-                <th>User</th>
-                <th>Detail</th>
-                <th>Edit</th>
-                <th>Delete</th>
-                <th>Status</th>
-            </tr>
-        </thead>
-        <tbody>
-            <tr>
-                <td>1</td>
-                <td>Column content</td>
-                <td><a href="#">click!</a></td>
-                <td><a href="#">click!</a></td>
-                <td><a href="#">click!</a></td>
-                <td>Student</td>
-            </tr>
-            <tr class="success">
-                <td>2</td>
-                <td>Column content</td>
-                <td>click!</td>
-                <td>click!</td>
-                <td>click!</td>
-                <td>Student</td>
-            </tr>
-        </tbody>
-    </table>
-    <div>
-        <ul class="pager">
-            <li><a href="javascript:void(0)">Previous</a></li>
-            <li><a href="javascript:void(0)">Next</a></li>
-        </ul>
-
-        <ul class="pager">
-            <li class="previous disabled"><a href="javascript:void(0)">← Older</a></li>
-            <li class="next"><a href="javascript:void(0)">Newer →</a></li>
-        </ul>
+    <div class="panel panel-primary">
+        <div class="panel-heading">
+            <h3 class="panel-title">ผู้ใช้งานในระบบ</h3>
+        </div>
+        <div class="panel-body">
+            <table class="table table-striped table-hover ">
+                <thead>
+                    <tr>
+                        <th>#</th>
+                        <th>User</th>
+                        <th>Detail</th>
+                        <th>Edit</th>
+                        <th>Delete</th>
+                        <th>Status</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>1</td>
+                        <td>Column content</td>
+                        <td><a href="#">click!</a></td>
+                        <td><a href="#">click!</a></td>
+                        <td><a href="#">click!</a></td>
+                        <td>Student</td>
+                    </tr>
+                    <tr class="success">
+                        <td>2</td>
+                        <td>Column content</td>
+                        <td>click!</td>
+                        <td>click!</td>
+                        <td>click!</td>
+                        <td>Student</td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
     </div>
-
-
 </div>
+<script>
+    $.material.init();
+</script>
