--- a/src/main/webapp/advise.html
+++ b/src/main/webapp/advise.html
@@ -1,48 +1,52 @@
 <div class="col-md-10">
-    <div class="form-group">
-        <div class="panel panel">
-            <div class="panel-heading">
-                <h3 class="panel-title">Search</h3>
-            </div>
-            <div class="panel-body">
-                <select class="form-control" id="select">
-                    <option>หมวดวิชาการ</option>
-                    <option>หมวดกิจกรรม</option>
-                    <option>หมวดเรื่องทั่วไป</option>
-                </select>
+
+    <div class="btn-group">
+        <a href="javascript:void(0)" class="btn btn-primary">Search by</a>
+        <a href="bootstrap-elements.html" data-target="#" class="btn btn-primary dropdown-toggle" data-toggle="dropdown"><span class="caret"></span></a>
+        <ul class="dropdown-menu">
+            <li>หมวดวิชาการ</li>
+            <li>หมวดกิจกรรม</li>
+            <li>หมวดเรื่องทั่วไป</li>
+        </ul>
+    </div>
+
+    <div class="panel panel-primary">
+        <div class="panel-heading">
+            <h3 class="panel-title">การให้คำปรึกษา</h3>
+        </div>
+        <div class="panel-body">
+            <div class="form-group">
+                <table class="table table-striped table-hover ">
+                    <thead>
+                        <tr>
+                            <th>ลำดับ</th>
+                            <th>นักศึกษา</th>
+                            <th>วันที่-เวลา</th>
+                            <th>ชื่อเรื่อง</th>
+                            <th>หมวด</th>
+                            <th>รายละเอียดคำปรึกษา</th>
+                            <th>คำอธิบาย</th>
+                            <th>edit</th>
+                            <th>delete</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td>1</td>
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                            <th></th>
+                            <th></th>
+                            <th></th>
+                            <th></th>
+                            <th></th>
+                        </tr>
+                    </tbody>
+                </table>
             </div>
         </div>
     </div>
-    <br>
-    <div class="form-group">
-        <table class="table table-striped table-hover ">
-            <thead>
-                <tr>
-                    <th>ลำดับ</th>
-                    <th>นักศึกษา</th>
-                    <th>วันที่-เวลา</th>
-                    <th>ชื่อเรื่อง</th>
-                    <th>หมวด</th>
-                    <th>รายละเอียดคำปรึกษา</th>
-                    <th>คำอธิบาย</th>
-                    <th>edit</th>
-                    <th>delete</th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr>
-                    <td>1</td>
-                    <td>Column content</td>
-                    <td>Column content</td>
-                    <td>Delete</td>
-                    <th></th>
-                    <th></th>
-                    <th></th>
-                    <th></th>
-                    <th></th>
-                </tr>
-            </tbody>
-        </table>
-    </div>
+
     <a href="#/adviseAdd"><button class="btn btn-success">เพิ่มคำปรึกษา</button></a>
 </div>
