--- a/src/main/webapp/adviseAdd.html
+++ b/src/main/webapp/adviseAdd.html
@@ -53,7 +53,7 @@
                             <div class="form-group">
                                 <center>
                                     <button class="btn btn-success">Save</button>
-                                    <button class="btn btn-danger">Cancle</button>
+                                    <a href="#/advise"><button class="btn btn-danger">Cancle</button></a>
                                 </center>
                             </div>
                         </fieldset>
