add timetable and course.html

--- a/src/main/webapp/timetable.html
+++ b/src/main/webapp/timetable.html
@@ -1,5 +1,10 @@
 
 <div class="col-md-10">
+    <div class="panel panel-primary">
+        <div class="panel-heading">
+            <h3 class="panel-title">ตารางเรียน/ตารางสอน</h3>
+        </div>
+        <div class="panel-body">
     <h1>ตารางเรียน/ตารางสอน</h1>  
     <div>
         <table class="table table-bordered">
@@ -114,7 +119,8 @@
         <button type="button" class="btn btn-success btn-lg"><a href="#/timetableAdd"><font color="black">edit</font></a></button>
     </div> 
 </div>
-
+    </div> 
+</div>
 
 
 
