--- a/src/main/webapp/course.html
+++ b/src/main/webapp/course.html
@@ -4,178 +4,206 @@
     <ul class="nav nav-pills"><a href="#/course_subject">วิชาที่ทำการเปิดสอนในแต่ละชั้นปี</a></ul>
     <ul class="nav nav-pills"><a href="#/courseAdd">เพิ่มรายวิชาในหลักสูตรการศึกษา</a></ul>
     <div>
-        <table class="table table-bordered">
-            <tbody>
-                <tr>
-                    <td><center>รหัสวิชา</center></td>
-            <td><center>รายวิชา</center></td>
-            <td><center>หน่วยกิต</center></td>
-            </tr>
-            <tr>
-                <td><center>1</center></td>
-            <td>หมวดศึกษาทั่วไป</td>
-            <td></td>
-            </tr>
-            <tr>
-                <td>1.1</td>
-                <td>กลุ่มวิชาสังคมศาสตร์และมนุษย์ศาสตร์</td>
-                <td></td>
-            </tr>
-            <tr>
-                <td></td>
-                <td></td>
-                <td></td>
-            </tr>
-            </tbody>
-            <tbody>
-                <tr>
-                    <td><center>รหัสวิชา</center></td>
-            <td><center>รายวิชา</center></td>
-            <td><center>หน่วยกิต</center></td>
-            </tr>
-            <tr>
-                <td><center>1</center></td>
-            <td>หมวดศึกษาทั่วไป</td>
-            <td></td>
-            </tr>
-            <tr>
-                <td>1.2</td>
-                <td>กลุ่มวิชาภาษา</td>
-                <td></td>
-            </tr>
-            <tr>
-                <td></td>
-                <td></td>
-                <td></td>
-            </tr>
-            </tbody>
-            <tbody>
-                <tr>
-                    <td><center>รหัสวิชา</center></td>
-            <td><center>รายวิชา</center></td>
-            <td><center>หน่วยกิต</center></td>
-            </tr>
-            <tr>
-                <td><center>1</center></td>
-            <td>หมวดศึกษาทั่วไป</td>
-            <td></td>
-            </tr>
-            <tr>
-                <td>1.3</td>
-                <td>กลุ่มวิชาวิทยาศาสตร์และคณิตศาสตร์</td>
-                <td></td>
-            </tr>
-            <tr>
-                <td></td>
-                <td></td>
-                <td></td>
-            </tr>
-            </tbody>
-            <tbody>
-                <tr>
-                    <td><center>รหัสวิชา</center></td>
-            <td><center>รายวิชา</center></td>
-            <td><center>หน่วยกิต</center></td>
-            </tr>
-            <tr>
-                <td><center>1</center></td>
-            <td>หมวดศึกษาทั่วไป</td>
-            <td></td>
-            </tr>
-            <tr>
-                <td>1.4</td>
-                <td>กลุ่มวิชาพลศึกษาหรือนันทนาการหรือกิจกรรม</td>
-                <td></td>
-            </tr>
-            <tr>
-                <td></td>
-                <td></td>
-                <td></td>
-            </tr>
-            </tbody>
-            <tbody>
-                <tr>
-                    <td><center>รหัสวิชา</center></td>
-            <td><center>รายวิชา</center></td>
-            <td><center>หน่วยกิต</center></td>
-            </tr>
-            <tr>
-                <td><center>2</center></td>
-            <td>หมวดวิชาเฉพาะ</td>
-            <td></td>
-            </tr>
-            <tr>
-                <td>2.1</td>
-                <td>กลุ่มวิชาชีพพื้นฐาน</td>
-                <td></td>
-            </tr>
-            <tr>
-                <td></td>
-                <td></td>
-                <td></td>
-            </tr>
-            </tbody>
-            <tbody>
-                <tr>
-                    <td><center>รหัสวิชา</center></td>
-            <td><center>รายวิชา</center></td>
-            <td><center>หน่วยกิต</center></td>
-            </tr>
-            <tr>
-                <td><center>2</center></td>
-            <td>หมวดวิชาเฉพาะ</td>
-            <td></td>
-            </tr>
-            <tr>
-                <td>2.2</td>
-                <td>กลุ่มวิชาชีพบังคับ</td>
-                <td></td>
-            </tr>
-            <tr>
-                <td></td>
-                <td></td>
-                <td></td>
-            </tr>
-            </tbody>
-            <tbody>
-                <tr>
-                    <td><center>รหัสวิชา</center></td>
-            <td><center>รายวิชา</center></td>
-            <td><center>หน่วยกิต</center></td>
-            </tr>
-            <tr>
-                <td><center>2</center></td>
-            <td>หมวดวิชาเฉพาะ</td>
-            <td></td>
-            </tr>
-            <tr>
-                <td>2.3</td>
-                <td>กลุ่มวิชาชีพเลือก</td>
-                <td></td>
-            </tr>
-            <tr>
-                <td></td>
-                <td></td>
-                <td></td>
-            </tr>
-            </tbody>
-            <tbody>
-                <tr>
-                    <td><center>รหัสวิชา</center></td>
-            <td><center>รายวิชา</center></td>
-            <td><center>หน่วยกิต</center></td>
-            </tr>
-            <tr>
-                <td><center>3</center></td>
-            <td>หมวดวิชาเลือกเสรี</td>
-            <td></td>
-            </tr>
-            <tr>
-                <td></td>
-                <td></td>
-                <td></td>
-            </tr>
-            </tbody>
-        </table>
+        <div class="panel panel-primary">
+            <div class="panel-heading">
+                <h3 class="panel-title">หมวดศึกษาทั่วไป</h3>
+            </div>
+            <div class="panel-body">
+                ------------------------------------------------------
+                <div class="panel panel-default">
+                    <div class="panel-heading">
+                        <h3 class="panel-title">กลุ่มวิชาสังคมศาสตร์และมนุษย์ศาสตร์</h3>
+                    </div>
+                    <div class="panel-body">
+                        <table class="table table-bordered">
+                            <tbody>
+                                <tr>
+                                    <td>รหัสวิชา</td>
+                                    <td>รายวิชา</td>
+                                    <td>หน่วยกิต</td>
+                                </tr>
+                                <tr>
+                                    <td></td>
+                                    <td></td>
+                                    <td></td>
+                                </tr>
+                            </tbody>
+                        </table>
+                    </div>
+                </div>
+                ------------------------------------------------------
+                <div class="panel panel-default">
+                    <div class="panel-heading">
+                        <h3 class="panel-title">กลุ่มวิชาภาษา</h3>
+                    </div>
+                    <div class="panel-body">
+                        <table class="table table-bordered">
+                            <tbody>
+                                <tr>
+                                    <td>รหัสวิชา</td>
+                                    <td>รายวิชา</td>
+                                    <td>หน่วยกิต</td>
+                                </tr>
+                                <tr>
+                                    <td></td>
+                                    <td></td>
+                                    <td></td>
+                                </tr>
+                            </tbody>
+                        </table>
+                    </div>
+                </div>
+                ------------------------------------------------------
+                <div class="panel panel-default">
+                    <div class="panel-heading">
+                        <h3 class="panel-title">กลุ่มวิชาวิทยาศาสตร์และคณิตศาสตร์</h3>
+                    </div>
+                    <div class="panel-body">
+                        <table class="table table-bordered">
+                            <tbody>
+                                <tr>
+                                    <td>รหัสวิชา</td>
+                                    <td>รายวิชา</td>
+                                    <td>หน่วยกิต</td>
+                                </tr>
+                                <tr>
+                                    <td></td>
+                                    <td></td>
+                                    <td></td>
+                                </tr>
+                            </tbody>
+                        </table>
+                    </div>
+                </div>
+                ------------------------------------------------------
+                <div class="panel panel-default">
+                    <div class="panel-heading">
+                        <h3 class="panel-title">กลุ่มวิชาพลศึกษาหรือนันทนาการหรือกิจกรรม</h3>
+                    </div>
+                    <div class="panel-body">
+                        <table class="table table-bordered">
+                            <tbody>
+                                <tr>
+                                    <td>รหัสวิชา</td>
+                                    <td>รายวิชา</td>
+                                    <td>หน่วยกิต</td>
+                                </tr>
+                                <tr>
+                                    <td></td>
+                                    <td></td>
+                                    <td></td>
+                                </tr>
+                            </tbody>
+                        </table>
+                    </div>
+                </div>
+                ------------------------------------------------------
+            </div>
+        </div>
+        -------
+        -------
+        -------
+        -------
+        <div class="panel panel-primary">
+            <div class="panel-heading">
+                <h3 class="panel-title">หมวดวิชาเฉพาะ</h3>
+            </div>
+            <div class="panel-body">
+                ------------------------------------------------------
+                <div class="panel panel-default">
+                    <div class="panel-heading">
+                        <h3 class="panel-title">กลุ่มวิชาชีพพื้นฐาน</h3>
+                    </div>
+                    <div class="panel-body">
+                        <table class="table table-bordered">
+                            <tbody>
+                                <tr>
+                                    <td>รหัสวิชา</td>
+                                    <td>รายวิชา</td>
+                                    <td>หน่วยกิต</td>
+                                </tr>
+                                <tr>
+                                    <td></td>
+                                    <td></td>
+                                    <td></td>
+                                </tr>
+                            </tbody>
+                        </table>
+                    </div>
+                </div>
+                ------------------------------------------------------
+                <div class="panel panel-default">
+                    <div class="panel-heading">
+                        <h3 class="panel-title">กลุ่มวิชาชีพบังคับ</h3>
+                    </div>
+                    <div class="panel-body">
+                        <table class="table table-bordered">
+                            <tbody>
+                                <tr>
+                                    <td>รหัสวิชา</td>
+                                    <td>รายวิชา</td>
+                                    <td>หน่วยกิต</td>
+                                </tr>
+                                <tr>
+                                    <td></td>
+                                    <td></td>
+                                    <td></td>
+                                </tr>
+                            </tbody>
+                        </table>
+                    </div>
+                </div>
+                ------------------------------------------------------
+                <div class="panel panel-default">
+                    <div class="panel-heading">
+                        <h3 class="panel-title">กลุ่มวิชาชีพเลือก</h3>
+                    </div>
+                    <div class="panel-body">
+                        <table class="table table-bordered">
+                            <tbody>
+                                <tr>
+                                    <td>รหัสวิชา</td>
+                                    <td>รายวิชา</td>
+                                    <td>หน่วยกิต</td>
+                                </tr>
+                                <tr>
+                                    <td></td>
+                                    <td></td>
+                                    <td></td>
+                                </tr>
+                            </tbody>
+                        </table>
+                    </div>
+                </div>
+                ------------------------------------------------------
+            </div>
+        </div>
+        -------
+        -------
+        -------
+        -------
+        <div class="panel panel-primary">
+            <div class="panel-heading">
+                <h3 class="panel-title">หมวดวิชาเลือกเสรี</h3>
+            </div>
+            <div class="panel-body">
+
+                <table class="table table-bordered">
+                    <tbody>
+                        <tr>
+                            <td>รหัสวิชา</td>
+                            <td>รายวิชา</td>
+                            <td>หน่วยกิต</td>
+                        </tr>
+                        <tr>
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
+        </div>
+
     </div>
 </div>
