add file html all

--- a/src/main/webapp/behavior.html
+++ b/src/main/webapp/behavior.html
@@ -1,6 +1,6 @@
 
 <div class="col-md-10">
-    <h2>รายงานความประพฤติ</h2>
+    <a href="#/behaviorAdd"><button class="btn btn-success">รายงานความประพฤติ</button></a>
     <ul class="nav nav-tabs" style="margin-bottom: 15px;">
         <li><a href="#profile" data-toggle="tab">ชั้นปีที่ 1</a></li>
         <li><a href="#profile" data-toggle="tab">ชั้นปีที่ 2</a></li>
@@ -35,5 +35,5 @@
             </tr>
         </tbody>
     </table>
-    <a href="#/behaviorAdd"><button class="btn btn-success">เพิ่มคำปรึกษา</button></a>
+    
 </div>
