--- a/src/main/webapp/behaviorAdd.html
+++ b/src/main/webapp/behaviorAdd.html
@@ -70,7 +70,7 @@
                             <div class="form-group">
                                 <center>
                                     <button class="btn btn-success">Save</button>
-                                    <button class="btn btn-danger">Cancle</button>
+                                    <a href="#/behavior"><button class="btn btn-danger">Cancle</button></a>
                                 </center>
                             </div>
                         </fieldset>
