--- a/src/main/webapp/course.html
+++ b/src/main/webapp/course.html
@@ -1,8 +1,7 @@
 
 <div class="col-md-10">  
-
-    <ul class="nav nav-pills"><a href="#/course_subject">วิชาที่ทำการเปิดสอนในแต่ละชั้นปี</a></ul>
-    <ul class="nav nav-pills"><a href="#/courseAdd">เพิ่มรายวิชาในหลักสูตรการศึกษา</a></ul>
+    <a href="#/course_subject"><button class="btn btn-success">วิชาที่ทำการเปิดสอนในแต่ละชั้นปี</button></a>
+    <a href="#/courseAdd"><button class="btn btn-success">เพิ่มรายวิชาในหลักสูตรการศึกษา</button></a>
     <div>
         <div class="panel panel-primary">
             <div class="panel-heading">
