--- a/src/main/webapp/index-template.html
+++ b/src/main/webapp/index-template.html
@@ -37,6 +37,7 @@
         <script src="js/student.js"></script>
         <script src="js/teacher.js"></script>
         <script src="js/timetable.js"></script>
+        <script src="js/profile.js"></script>
 
         <script>
             $.material.init();
@@ -53,7 +54,7 @@
                     <div id="navbar" class="navbar-collapse collapse">
                         <br>
                         <ul class="nav navbar-nav navbar-right">
-                            <li><a href="profile.html">Profile</a></li>
+                            <li><a href="#/profile">Profile</a></li>
                             <li><a href="#">Help</a></li>
                         </ul>
                         <form class="navbar-form navbar-right">
