--- a/src/main/webapp/admin_add_User.html
+++ b/src/main/webapp/admin_add_User.html
@@ -2,10 +2,8 @@
     $.material.init();
 </script>
 <div class="col-md-10">
-    <ul class="nav nav-pills">
-        <li><a href="#/admin_add_groupemail">ส่งอีเมล์ถึงสมาชิก</a></li>
-        <li><a href="#/admin_add_information">เพิ่มข่าวประชาสัมพันธ์</a></li>
-    </ul>
+    <a href="#/admin_add_groupemail"><button class="btn btn-success">ส่งอีเมล์ถึงสมาชิก</button></a>
+    <a href="#/admin_add_information"><button class="btn btn-success">เพิ่มข่าวประชาสัมพันธ์</button></a>
     <div class="panel panel-primary">
         <div class="panel-heading">
             <h3 class="panel-title">เพิ่มผู้ใช้งาน</h3>
