--- a/src/main/webapp/advise.html
+++ b/src/main/webapp/advise.html
@@ -1,20 +1,21 @@
 <div class="col-md-10">
+    <div><a href="#/adviseAdd"><button class="btn btn-success">เพิ่มคำปรึกษา</button></a></div>
 
-    <div class="btn-group">
-        <a href="javascript:void(0)" class="btn btn-primary">Search by</a>
-        <a href="bootstrap-elements.html" data-target="#" class="btn btn-primary dropdown-toggle" data-toggle="dropdown"><span class="caret"></span></a>
-        <ul class="dropdown-menu">
-            <li>หมวดวิชาการ</li>
-            <li>หมวดกิจกรรม</li>
-            <li>หมวดเรื่องทั่วไป</li>
-        </ul>
-    </div>
 
     <div class="panel panel-primary">
         <div class="panel-heading">
             <h3 class="panel-title">การให้คำปรึกษา</h3>
         </div>
         <div class="panel-body">
+            <div class="btn-group">
+                <a href="javascript:void(0)" class="btn btn-primary">Search by</a>
+                <a href="bootstrap-elements.html" data-target="#" class="btn btn-primary dropdown-toggle" data-toggle="dropdown"><span class="caret"></span></a>
+                <ul class="dropdown-menu">
+                    <li>หมวดวิชาการ</li>
+                    <li>หมวดกิจกรรม</li>
+                    <li>หมวดเรื่องทั่วไป</li>
+                </ul>
+            </div>
             <div class="form-group">
                 <table class="table table-striped table-hover ">
                     <thead>
@@ -47,6 +48,4 @@
             </div>
         </div>
     </div>
-
-    <a href="#/adviseAdd"><button class="btn btn-success">เพิ่มคำปรึกษา</button></a>
 </div>
