--- a/src/main/webapp/appointmentAdd.html
+++ b/src/main/webapp/appointmentAdd.html
@@ -7,7 +7,7 @@
 
 <div class="col-md-10">
 
-    <div class="panel panel-default">
+    <div class="panel panel-primary">
         <div class="panel-heading">Calendar</div>
         <div class="panel-body">
             <div style="overflow:hidden;">
@@ -96,23 +96,22 @@
             </div>
 
             <div class="form-group">
-                <label class="control-label col-sm-2" for="email">แนบไฟล์ : </label>
-                <div class="col-sm-10">
-                    <div style="position:relative;">
-                        <a class='btn btn-success' href='javascript:;'>
-                            Choose File...
-                            <input type="file" style='position:absolute;z-index:2;top:0;left:0;filter: alpha(opacity=0);-ms-filter:"progid:DXImageTransform.Microsoft.Alpha(Opacity=0)";opacity:0;' name="file_source" size="40"  onchange='$("#upload-file-info").html($(this).val());'>
-                        </a>
-                        &nbsp;
-                        <span class='label label-info' id="upload-file-info"></span>
-                    </div>
+                <label for="inputFile" class="col-lg-2 control-label">File</label>
+                <div class="col-lg-10">
+                    <input type="text" id="input-file" readonly="" class="form-control floating-label" placeholder="Browse...">
+                    <input type="file" id="input-file"> 
                 </div>
             </div>
 
-            <input type="submit" value="save" ng-click="save()" class="btn btn-success">
+            <div class="form-group">
+                <center>
+                    <button class="btn btn-success">Save</button>
+                    <a href="#/appointment"><button class="btn btn-danger">Cancle</button></a>
+                </center>
+            </div>
         </form> 
     </div>
 </div>
 <script>
-            $.material.init();
+    $.material.init();
 </script>
