--- a/src/main/webapp/course_subject_2.html
+++ b/src/main/webapp/course_subject_2.html
@@ -52,8 +52,9 @@
 
         <div class="form-group">
             <div class="col-lg-10 col-lg-offset-2">
-                <button class="btn btn-default">Cancel</button>
+                
                 <button type="submit" class="btn btn-primary">Save</button>
+                 <a href="#/course_subject"><button class="btn btn-danger">Cancel</button></a>
             </div>
         </div>
     </div>
