--- a/src/main/webapp/timetableAdd.html
+++ b/src/main/webapp/timetableAdd.html
@@ -1,14 +1,9 @@
-
 <div class="col-md-10">
     <h1>ตารางเรียน/ตารางสอน</h1>  
-    
-        <button type="button" class="btn btn-success btn-lg"><a href="#/timetableAdd"><font color="black">edit</font></a></button>
-    </div> 
-</div>
 
-<script>
-    $.material.init();
-</script>
+    <button type="button" class="btn btn-success btn-lg"><a href="#/timetableAdd"><font color="black">edit</font></a></button>
+    <button type="button" class="btn btn-success btn-lg"><a href="#/timetable"><font color="black">cancle</font></a></button>
+</div> 
 
 
 
