--- a/src/main/webapp/index-template.html
+++ b/src/main/webapp/index-template.html
@@ -23,25 +23,25 @@
         <script src="js/admin_add_User.js"></script>
         <script src="js/admin_add_groupemail.js"></script>
         <script src="js/admin_add_information.js"></script>
-        <script src="js/advise.js"></script>
-        <script src="js/appointment.js"></script>
-        <script src="js/behavior.js"></script>
-        <script src="js/course.js"></script>
+        <script src="js/app/advise.js"></script>
+        <script src="js/app/appointment.js"></script>
+        <script src="js/app/behavior.js"></script>
+        <script src="js/app/course.js"></script>
         <script src="js/course_subject.js"></script>
         <script src="js/course_subject_1.js"></script>
         <script src="js/course_subject_2.js"></script>
         <script src="js/course_subject_3.js"></script>
         <script src="js/course_subject_4.js"></script>
         <script src="js/course_subject_5.js"></script>
-        <script src="js/parent.js"></script>
-        <script src="js/student.js"></script>
-        <script src="js/teacher.js"></script>
-        <script src="js/timetable.js"></script>
+        <script src="js/app/parent.js"></script>
+        <script src="js/app/student.js"></script>
+        <script src="js/app/teacher.js"></script>
+        <script src="js/app/timetable.js"></script>
         <script src="js/profile.js"></script>
 
-        <script>
+<!--        <script>
             $.material.init();
-        </script>
+        </script>-->
     </head>
     <body>
         <div>
@@ -87,7 +87,7 @@
 
                     <div class="col-md-10">
 
-                        <div ng-view="">
+                        <div ng-view>
 
                         </div>
 
