--- a/src/main/webapp/studentAdd.html
+++ b/src/main/webapp/studentAdd.html
@@ -1,3 +1,5 @@
+{{student}}
+
 <div class="col-md-10" ng-app="student" ng-controller="studentController">
     <a href="#/student"><button class="btn btn-success">รายชื่อนักศึกษาทุกชั้นปี</button></a>
     <a href="#/studentEdit"><button class="btn btn-success">คำร้องขอเปลี่ยนอาจารย์ที่ปรึกษา</button></a>
@@ -17,20 +19,20 @@
                                         <div class="form-group">
                                             <label for="inputEmail" class="col-lg-2 control-label">Email</label>
                                             <div class="col-lg-10">
-                                                <input type="email" class="form-control" id="inputEmail" placeholder="Email" ng-model="email">
+                                                <input type="email" class="form-control" id="inputEmail" placeholder="Email" ng-model="student.email">
                                             </div>
                                         </div>
                                         <div class="form-group">
                                             <label for="inputPassword" class="col-lg-2 control-label">Password</label>
                                             <div class="col-lg-10">
-                                                <input type="password" class="form-control" id="inputPassword" placeholder="Password" ng-model="password">
+                                                <input type="password" class="form-control" id="inputPassword" placeholder="Password" ng-model="student.password">
                                             </div>
                                         </div>
                                     </div>
                                 </div>
                                 <div class="form-group">
                                     <div class="col-lg-10 col-lg-offset-2">
-                                        <button type="submit" class="btn btn-primary">Update</button>
+                                        <button type="submit" class="btn btn-primary" ng-click="save()">Update</button>
                                         <a href="#/student"><button class="btn btn-danger">Cancel</button></a>
                                     </div>
                                 </div>
@@ -94,7 +96,7 @@
                                 </div>
                                 <div class="form-group">
                                     <div class="col-lg-10 col-lg-offset-2">
-                                        <button type="submit" class="btn btn-primary">Update</button>
+                                        <button type="submit" class="btn btn-primary" ng-click="save()">Update</button>
                                         <a href="#/student"><button class="btn btn-danger">Cancel</button></a>
                                     </div>
                                 </div>
@@ -103,19 +105,7 @@
                     </div>
                 </div>
             </div>
-            <script>
-                $.material.init();
-            </script>
-        </div>
-        <style>
-            #growl-custom{
-                display: none;
-                position: absolute;
-                z-index: 1000;
-                padding: 15px 20px;
-                border-radius: 10px;
-            }
 
-        </style>
+        </div>
     </div>
 </div>
