--- a/src/main/webapp/studentAdd.html
+++ b/src/main/webapp/studentAdd.html
@@ -107,5 +107,13 @@
             </div>
 
         </div>
+        <div class="col-md-10">
+            <table>
+                <tr ng-repeat="stu in students.content">
+                    <td>{{stu.email}}</td>
+                    <td>{{stu.password}}</td>
+                </tr>
+            </table>
+        </div>
     </div>
 </div>
