--- a/src/main/webapp/index-template.html
+++ b/src/main/webapp/index-template.html
@@ -20,19 +20,19 @@
         <script src="js/angular-router.js"></script>
         <script src="js/app.js"></script>
         <script src="js/home.js"></script>
-        <script src="js/admin_add_User.js"></script>
-        <script src="js/admin_add_groupemail.js"></script>
-        <script src="js/admin_add_information.js"></script>
+        <script src="js/app/admin_add_User.js"></script>
+        <script src="js/app/admin_add_groupemail.js"></script>
+        <script src="js/app/admin_add_information.js"></script>
         <script src="js/app/advise.js"></script>
         <script src="js/app/appointment.js"></script>
         <script src="js/app/behavior.js"></script>
         <script src="js/app/course.js"></script>
-        <script src="js/course_subject.js"></script>
-        <script src="js/course_subject_1.js"></script>
-        <script src="js/course_subject_2.js"></script>
-        <script src="js/course_subject_3.js"></script>
-        <script src="js/course_subject_4.js"></script>
-        <script src="js/course_subject_5.js"></script>
+        <script src="js/app/course_subject.js"></script>
+        <script src="js/app/course_subject_1.js"></script>
+        <script src="js/app/course_subject_2.js"></script>
+        <script src="js/app/course_subject_3.js"></script>
+        <script src="js/app/course_subject_4.js"></script>
+        <script src="js/app/course_subject_5.js"></script>
         <script src="js/app/parent.js"></script>
         <script src="js/app/student.js"></script>
         <script src="js/app/teacher.js"></script>
