--- a/src/main/webapp/index-template.html
+++ b/src/main/webapp/index-template.html
@@ -37,11 +37,8 @@
         <script src="js/app/student.js"></script>
         <script src="js/app/teacher.js"></script>
         <script src="js/app/timetable.js"></script>
-        <script src="js/profile.js"></script>
+       
 
-<!--        <script>
-            $.material.init();
-        </script>-->
     </head>
     <body>
         <div>
@@ -55,8 +52,8 @@
                         <br>
 
                         <form class="navbar-form navbar-right">
-                            <span class="mdi-action-search"></span>
-                            <input type="text" class="form-control" placeholder="Search...">                           
+                            <br>
+                            <h4 align="right"><a href="http://www.rmutk.ac.th/" class="text-success">Rajamangala University of Technology krungthep</a></h4>                        
                         </form>
                     </div>
                 </div>
@@ -76,7 +73,6 @@
                             <a href="#/teacher" class="btn btn-primary">อาจารย์</a>
                             <a href="#/student" class="btn btn-primary">นักศึกษา</a>
                             <a href="#/parent" class="btn btn-primary">ผู้ปกครอง</a>
-                            <a href="#/profile" class="btn btn-primary">Profile</a>
                             <a href="#/advise" class="btn btn-primary">ข้อมูลการให้คำปรึกษา</a>
                             <a href="#/behavior" class="btn btn-primary">ข้อมูลความประพฤติ</a>
                             <a href="#/appointment" class="btn btn-primary">ข้อมูลการนัดหมาย</a>
@@ -93,7 +89,7 @@
 
                     </div>
                 </div>
-                
+
             </div>
         </div>
 
