--- a/src/main/webapp/admin_add_information.html
+++ b/src/main/webapp/admin_add_information.html
@@ -1,4 +1,11 @@
-<div class="col-md-10">
+<link rel="stylesheet" href="calendar/jquery-ui.css" />
+<link rel="stylesheet" href="calendar/jquery-ui-timepicker-addon.css" />
+<script src="calendar/jquery-1.10.2.min.js"></script>
+<script src="calendar/jquery-ui.min.js"></script>
+<script src="calendar/jquery-ui-timepicker-addon.js"></script>
+<script src="calendar/jquery-ui-sliderAccess.js"></script>
+
+<div class="col-md-10" ng-app="admin_add_information" ng-click="admin_add_informationController">
     <div class="panel panel-primary">
         <div class="panel-heading">
             <h3 class="panel-title">เพิ่มข่าวประชาสัมพันธ์</h3>
@@ -7,13 +14,29 @@
             <div class="form-group">
                 <label for="text" class="col-lg-2 control-label">วันเดือนปี</label>
                 <div class="col-lg-10">
-                    <input type="text" class="form-control">
+                    <script type="text/javascript">
+                                $(function () {
+                                    $("#dateInputStart").datepicker({
+                                        dateFormat: 'dd-M-yy'
+                                    });
+                                });
+                    </script>
+                    <input class="form-control" type="text" name="dateInputStart" id="dateInputStart" value="" ng-model="information.startTime">
+                    <!--<input type="text" class="form-control" ng-model="information.startTime">-->
                 </div>
             </div>
             <div class="form-group">
                 <label for="text" class="col-lg-2 control-label">หมดเวลาแสดง</label>
                 <div class="col-lg-10">
-                    <input type="text" class="form-control">
+                    <script type="text/javascript">
+                                $(function () {
+                                    $("#dateInput").datepicker({
+                                        dateFormat: 'dd-M-yy'
+                                    });
+                                });
+                    </script>
+                    <input class="form-control" type="text" name="dateInput" id="dateInput" value="" ng-model="information.endTime">
+                    <!--<input class="form-control" type="text" name="dateInput" id="dateInput" value="" ng-model="information.endTime">-->
                 </div>
             </div>
             <div class="form-group">
@@ -26,30 +49,30 @@
             <div class="form-group">
                 <label for="text" class="col-lg-2 control-label">ชื่อเรื่อง(ไทย)</label>
                 <div class="col-lg-10">
-                    <input type="text" class="form-control" >
+                    <input type="text" class="form-control" ng-model="information.title">
                 </div>
             </div>
             <div class="form-group">
                 <label for="text" class="col-lg-2 control-label">เนื้อหาย่อ(ไทย)</label>
                 <div class="col-lg-10">
-                    <input type="text" class="form-control" >
+                    <input type="text" class="form-control" ng-model="information.pageBrief">
                 </div>
             </div>
             <div class="form-group">
                 <label for="textArea" class="col-lg-2 control-label">รายละเอียด</label>
                 <div class="col-lg-10">
-                    <textarea class="form-control" rows="3" id="textArea"></textarea>
+                    <textarea class="form-control" rows="3" id="textArea" ng-model="information.description"></textarea>
                 </div>
             </div>
             <div class="form-group">
                 <label for="text" class="col-lg-2 control-label">Link web</label>
                 <div class="col-lg-10">
-                    <input type="text" class="form-control" >
+                    <input type="text" class="form-control" ng-model="information.linkWeb">
                 </div>
             </div>
             <div class="form-group">
                 <div class="col-lg-10 col-lg-offset-2">
-                    <button class="btn btn-primary">Save</button>
+                    <button class="btn btn-primary" ng-click="saveInfor()">Save</button>
                     <a href="#/admin_add_User"><button class="btn btn-danger">Cancel</button></a>
                 </div>
             </div>
@@ -63,28 +86,24 @@
             <table class="table table-striped table-hover ">
                 <thead>
                     <tr>
-                        <th>#</th>
-                        <th>วันที่</th>
-                        <th>ไฟล์แนบ</th>
+                        <th>ลำดับ</th>
+                        <th>วันที่ลงข่าว</th>
                         <th>ชื่อเรื่อง</th>
-                        <th>รายละเอียดข่าว</th>
-                        <th>Link web</th>
-                        <th>Edit</th>
+                        <th>เนื้อหาย่อ</th>
                         <th>Delete</th>
-                        <th>Status</th>
                     </tr>
                 </thead>
                 <tbody>
-                    <tr>
-                        <th>#</th>
-                        <th>Date</th>
-                        <th>File</th>
-                        <th>ชื่อเรื่อง</th>
-                        <th>Detail</th>
-                        <th>Link web</th>
-                        <th>Edit</th>
-                        <th>Delete</th>
-                        <th>Status</th>
+                    <tr ng-repeat="infor in informationshow.content">
+                        <th>{{infor.id}}</th>
+                        <th>{{infor.startTime}}</th>
+                        <th>{{infor.title}}</th>
+                        <th>{{infor.pageBrief}}</th>
+                        <th>
+                            <button class="btn" ng-click="deleteInformation(infor)">
+                                <span class="glyphicon glyphicon-trash"></span>&nbsp;&nbsp;Delete
+                            </button>
+                        </th>
                     </tr>
                 </tbody>
             </table>
