--- a/src/main/webapp/advise.html
+++ b/src/main/webapp/advise.html
@@ -1,13 +1,23 @@
 <div class="col-md-10">
     <div><a href="#/adviseAdd"><button class="btn btn-success">เพิ่มคำปรึกษา</button></a></div>
 
+    <div class="input-group">
+        <span class="mdi-action-search">
+            <input type="text" class="form-control" placeholder="Search..." width="0">   
+        </span>                        
+    </div>
+    <br>
 
     <div class="panel panel-primary">
         <div class="panel-heading">
             <h3 class="panel-title">การให้คำปรึกษา</h3>
         </div>
+
+
         <div class="panel-body">
+            
             <div class="btn-group">
+
                 <a href="javascript:void(0)" class="btn btn-primary">Search by</a>
                 <a href="bootstrap-elements.html" data-target="#" class="btn btn-primary dropdown-toggle" data-toggle="dropdown"><span class="caret"></span></a>
                 <ul class="dropdown-menu">
@@ -15,6 +25,7 @@
                     <li>หมวดกิจกรรม</li>
                     <li>หมวดเรื่องทั่วไป</li>
                 </ul>
+                
             </div>
             <div class="form-group">
                 <table class="table table-striped table-hover ">
