--- a/src/main/webapp/adviseAdd.html
+++ b/src/main/webapp/adviseAdd.html
@@ -1,4 +1,11 @@
-<div class="col-md-10">
+<link rel="stylesheet" href="calendar/jquery-ui.css" />
+<link rel="stylesheet" href="calendar/jquery-ui-timepicker-addon.css" />
+<script src="calendar/jquery-1.10.2.min.js"></script>
+<script src="calendar/jquery-ui.min.js"></script>
+<script src="calendar/jquery-ui-timepicker-addon.js"></script>
+<script src="calendar/jquery-ui-sliderAccess.js"></script>
+
+<div class="col-md-10" ng-app="advise" ng-controller="adviseController">
     <div id="myTabContent" class="tab-content">
         <div class="list-group">
             <div class="list-group-item">
@@ -16,31 +23,38 @@
                             <div class="form-group">
                                 <label for="text" class="col-lg-2 control-label">นักศึกษา</label>
                                 <div class="col-lg-10">
-                                    <input type="text" class="form-control">
+                                    <input type="text" class="form-control" ng-model="advise.idSubject">
                                 </div>
                             </div>
                             <div class="form-group">
                                 <label for="text" class="col-lg-2 control-label">วันที่-เวลา</label>
                                 <div class="col-lg-10">
-                                    <input type="text" class="form-control">
+                                    <script type="text/javascript">
+                                                        $(function () {
+                                                            $("#dateInputAd").datepicker({
+                                                                dateFormat: 'dd-M-yy'
+                                                            });
+                                                        });
+                                    </script>
+                                    <input type="text" class="form-control" name="dateInputAd" id="dateInputAd" value="" ng-model="advise.date">
                                 </div>
                             </div>
                             <div class="form-group">
                                 <label for="text" class="col-lg-2 control-label">ชื่อเรื่อง</label>
                                 <div class="col-lg-10">
-                                    <input type="text" class="form-control">
+                                    <input type="text" class="form-control" ng-model="advise.title">
                                 </div>
                             </div>
                             <div class="form-group">
                                 <label for="text" class="col-lg-2 control-label">รายละเอียดการให้คำปรึกษา</label>
                                 <div class="col-lg-10">
-                                    <input type="text" class="form-control">
+                                    <input type="text" class="form-control" ng-model="advise.detail">
                                 </div>
                             </div>
                             <div class="form-group">
                                 <label for="text" class="col-lg-2 control-label">คำอธิบาย</label>
                                 <div class="col-lg-10">
-                                    <input type="text" class="form-control">
+                                    <input type="text" class="form-control" ng-model="advise.description">
                                 </div>
                             </div>
                             <div class="form-group">
@@ -52,7 +66,7 @@
                             </div>
                             <div class="form-group">
                                 <center>
-                                    <button class="btn btn-success">Save</button>
+                                    <button class="btn btn-success" ng-click="saveAd()">Save</button>
                                     <a href="#/advise"><button class="btn btn-danger">Cancle</button></a>
                                 </center>
                             </div>
@@ -62,6 +76,39 @@
                 </div>
             </div>
         </div>
-
+    </div>
+    <div class="panel panel-primary">
+        <div class="panel-heading">
+            <h3 class="panel-title">คำที่ปรึกษา</h3>
+        </div>
+        <div class="panel-body">
+            <table class="table table-striped table-hover ">
+                <thead>
+                    <tr>
+                        <th>ลำดับ</th>
+                        <th>รหัสนักศึกษา</th>
+                        <th>ชื่อนักกศึกษา</th>
+                        <th>วันที่</th>
+                        <th>ชื่อเรื่อง</th>
+                        <th>Delete</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr ng-repeat="ad in adviseshow.content">
+                        <th>{{ad.id}}</th>
+                        <th> </th>
+                        <th>{{ad.idSubject}}</th>
+                        <th>{{ad.date}}</th>
+                        <th>{{ad.title}}</th>
+                        <th>
+                            <button class="btn" ng-click="deleteAdvise(ad)">
+                                <span class="glyphicon glyphicon-trash"></span>&nbsp;&nbsp;Delete
+                            </button>
+                        </th>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
     </div>
 </div>
+
