--- a/src/main/webapp/behaviorAdd.html
+++ b/src/main/webapp/behaviorAdd.html
@@ -1,4 +1,11 @@
-<div class="col-md-10">
+<link rel="stylesheet" href="calendar/jquery-ui.css" />
+<link rel="stylesheet" href="calendar/jquery-ui-timepicker-addon.css" />
+<script src="calendar/jquery-1.10.2.min.js"></script>
+<script src="calendar/jquery-ui.min.js"></script>
+<script src="calendar/jquery-ui-timepicker-addon.js"></script>
+<script src="calendar/jquery-ui-sliderAccess.js"></script>
+
+<div class="col-md-10" ng-app="behavior" ng-controller="behaviorController">
     <div id="myTabContent" class="tab-content">
         <div class="list-group">
             <div class="list-group-item">
@@ -16,19 +23,27 @@
                             <div class="form-group">
                                 <label for="text" class="col-lg-2 control-label">นักศึกษา</label>
                                 <div class="col-lg-10">
-                                    <input type="text" style="background: #C0F9BD" class="form-control">
+                                    <input type="text" style="background: #C0F9BD" class="form-control" ng-model="behavior.namestudent">
                                 </div>
                             </div>
-                            <div class="form-group">
-                                <label for="text" class="col-lg-2 control-label">ชั้นปี</label>
-                                <div class="col-lg-10">
-                                    <input type="text" style="background: #C0F9BD" class="form-control">
-                                </div>
-                            </div>
+                            <!--                            <div class="form-group">
+                                                            <label for="text" class="col-lg-2 control-label">ชั้นปี</label>
+                                                            <div class="col-lg-10">
+                                                                <input type="text" style="background: #C0F9BD" class="form-control">
+                                                            </div>
+                                                        </div>-->
                             <div class="form-group">
                                 <label for="text" class="col-lg-2 control-label">วันที่-เวลา</label>
                                 <div class="col-lg-10">
-                                    <input type="text" style="background: #C0F9BD" class="form-control">
+                                    <script type="text/javascript">
+                                                        $(function () {
+                                                            $("#dateInputBe").datepicker({
+                                                                dateFormat: 'dd-M-yy'
+                                                            });
+                                                        });
+                                    </script>
+                                    <input type="text" class="form-control" name="dateInputBe" id="dateInputBe" value="" style="background: #C0F9BD" ng-model="behavior.dates">
+
                                 </div>
                             </div>
 
@@ -39,19 +54,19 @@
                                         <div class="form-group">
                                             <label for="text" class="col-lg-2 control-label">ชื่อเรื่อง</label>
                                             <div class="col-lg-10">
-                                                <input type="text" style="width:500px;" class="form-control">
+                                                <input type="text" style="width:500px;" class="form-control" ng-model="behavior.title">
                                             </div>
                                         </div>
                                         <div class="form-group">
                                             <label for="text" class="col-lg-2 control-label">รายละเอียดความประพฤติ</label>
                                             <div class="col-lg-10">
-                                                <input type="text" style="width:500px;" class="form-control">
+                                                <input type="text" style="width:500px;" class="form-control" ng-model="behavior.detail"> 
                                             </div>
                                         </div>
                                         <div class="form-group">
                                             <label for="text" class="col-lg-2 control-label">คำอธิบาย</label>
                                             <div class="col-lg-10">
-                                                <input type="text" style="width:500px;" class="form-control">
+                                                <input type="text" style="width:500px;" class="form-control" ng-model="behavior.description">
                                             </div>
                                         </div>
                                         <div class="form-group">
@@ -69,7 +84,7 @@
 
                             <div class="form-group">
                                 <center>
-                                    <button class="btn btn-success">Save</button>
+                                    <button class="btn btn-success" ng-click="saveBehavior()">Save</button>
                                     <a href="#/behavior"><button class="btn btn-danger">Cancle</button></a>
                                 </center>
                             </div>
@@ -79,6 +94,38 @@
                 </div>
             </div>
         </div>
-
+    </div>
+    <div class="panel panel-primary">
+        <div class="panel-heading">
+            <h3 class="panel-title">ความประพฤติ</h3>
+        </div>
+        <div class="panel-body">
+            <table class="table table-striped table-hover ">
+                <thead>
+                    <tr>
+                        <th>ลำดับ</th>
+                        <th>รหัสนักศึกษา</th>
+                        <th>ชื่อนักศึกษา</th>
+                        <th>วันที่</th>
+                        <th>หัวข้อ</th>
+                        <th>Delete</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr ng-repeat="beha in behaviorshow.content">
+                        <th>{{beha.id}}</th>
+                        <th> </th>
+                        <th>{{beha.namestudent}}</th>
+                        <th>{{beha.dates}}</th>
+                        <th>{{beha.title}}</th>
+                        <th>
+                            <button class="btn" ng-click="deleteBehavior(beha)">
+                                <span class="glyphicon glyphicon-trash"></span>&nbsp;&nbsp;Delete
+                            </button>
+                        </th>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
     </div>
 </div> 
