--- a/src/main/webapp/home.html
+++ b/src/main/webapp/home.html
@@ -4,7 +4,8 @@
 <script src="calendar/jquery-ui.min.js"></script>
 <script src="calendar/jquery-ui-timepicker-addon.js"></script>
 <script src="calendar/jquery-ui-sliderAccess.js"></script>
-<div class="col-md-10">
+
+<div class="col-md-10" ng-app="admin_add_information" ng-controller="admin_add_informationController">
     <div class="panel panel-success">
         <div class="panel-heading">
             <h3 class="panel-title">ประชาสัมพันธ์</h3>
@@ -15,7 +16,17 @@
                 <li><a href="http://md.rmutk.ac.th/">ระบบ E-Learning</a></li>
                 <li><a href="http://mis.rmutk.ac.th/">ระบบประเมินผลการสอน</a></li>
             </ul>
-            
+            <div class="containerbg- ">
+                <div class="row">
+                    <div class="col-sm-4" ng-repeat="news in informationshow.content">
+                        <h3>{{news.title}}</h3>
+                        <p>{{news.pageBrief}}</p>
+                        <p>{{news.description}}</p>
+                        <p><a href="{{news.linkWeb}}">{{news.linkWeb}}</a></p>
+                    </div>
+
+                </div>
+            </div>            
         </div>
     </div>
 
@@ -35,12 +46,12 @@
                     </div>
                 </div>
                 <script type="text/javascript">
-                    $(function () {
-                        $('#datetimepicker12').datepicker({
-                            inline: true,
-                            sideBySide: true
-                        });
-                    });
+                                    $(function () {
+                                        $('#datetimepicker12').datepicker({
+                                            inline: true,
+                                            sideBySide: true
+                                        });
+                                    });
                 </script>
             </div>
         </div>
