--- a/src/main/webapp/index-template.html
+++ b/src/main/webapp/index-template.html
@@ -37,7 +37,7 @@
         <script src="js/app/student.js"></script>
         <script src="js/app/teacher.js"></script>
         <script src="js/app/timetable.js"></script>
-       
+        <script src="js/app/checklist-model.js"></script>
 
     </head>
     <body>
