add course file

--- a/src/main/webapp/index-template.html
+++ b/src/main/webapp/index-template.html
@@ -27,6 +27,7 @@
         <script src="js/app/appointment.js"></script>
         <script src="js/app/behavior.js"></script>
         <script src="js/app/course.js"></script>
+        <script src="js/app/course_add.js"></script>
         <script src="js/app/course_subject.js"></script>
         <script src="js/app/course_subject_1.js"></script>
         <script src="js/app/course_subject_2.js"></script>
